--- a/(2)Cookie Monster Portfolio/index.html
+++ b/(2)Cookie Monster Portfolio/index.html
@@ -15,20 +15,22 @@
 <body>
 	<div id="container">
 	<!-- START HERE --> 
-	<h1>Cookie Monster</h1>
-	<h2>Chocolate Chip Evangelist</h2>
-	<p>Hi, I'm Cookie Monster. I love cookies big and small, I love cookies I love them all. 
-		Do you have cookies? Do you need them eaten? If so, me the monster for the job.</p>
+		<h1>Cookie Monster</h1>
+		<h2>Chocolate Chip Evangelist</h2>
+		<p>Hi, I'm Cookie Monster. I love cookies big and small, I love cookies I love them all. 
+			Do you have cookies? Do you need them eaten? If so, me the monster for the job.</p>
 	
-	<p>Flavors of expertise: chocolate chip cookies, peanut butter cookies, maple leaf cookies - 
-		and while you were reading I just ate your browser cookies...om nom nom nom.</p>
+		<p>Flavors of expertise: chocolate chip cookies, peanut butter cookies, maple leaf cookies - 
+			and while you were reading I just ate your browser cookies...om nom nom nom.</p>
 	
-	<p>	My favorite word? Cookie! My least favorite word? "outofcookies". 
-		Me have over 30 years of experience with cookies on Sesame Street. And if you want to see me in action please watch my SNL demo reel where I act, sing and eat cookies.</p>
+		<p>	My favorite word? Cookie! My least favorite word? "outofcookies". 
+			Me have over 30 years of experience with cookies on <a href="http://www.sesamestreet.org/" target="_blank">Sesame Street</a>. And if you want to see me in action please watch my <a href="http://www.youtube.com/watch?v=C-PkQRh3QXA" target="_blank">SNL demo reel</a> where I act, sing and eat cookies.</p>
 
-
+        <a href="https://twitter.com/#!/mewantcookie" target="_blank"><img src="images/social-twitter.png" alt="Twitter"></a>
+		<a href="https://www.facebook.com/pages/Cookie-Monster-should-host-Saturday-Night-Live/130316933655526" target="_blank"><img src="images/social-facebook.png" alt="Facebook"></a>
 	<!-- END HERE --> 
-	</div><!-- #container --> 
+	
+	</div><!-- #container -->
 </body>
 </html>
 
