--- a/4-Blog/index.html
+++ b/4-Blog/index.html
@@ -23,8 +23,8 @@
 
 			<div id="main">
 				<h2>Heading</h2>
-				<img src="images/kitten.jpg" alt="kitten">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<img src="images/kitten.jpg" alt="kitten" class="alignright">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 				
 				<h2>Blog Post #2</h2>
 				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates fugit atque nihil delectus quae earum libero, iure voluptate nobis enim rerum obcaecati placeat veniam autem porro minima? Inventore, cumque dignissimos?</p>
@@ -44,7 +44,7 @@
 			<div class="clear"></div>
 
 			<div id="footer">
-				<p>Created by <a href="http://twitter.com" target="_blank">Castig for OneMonthHTML</a></p>
+				<p>Created by <a href="http://twitter.com" target="_blank">Thomas for OneMonthHTML</a></p>
 			</div> <!-- #footer -->
 
 		</div>
