--- a/6-Happy Birthday/index.html
+++ b/6-Happy Birthday/index.html
@@ -9,7 +9,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,700|Lobster' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body>
+  <body style="background-image: url('images/space-background.png');">
     <div class="container">
 
       <section class="hero">
