Began styling rental/profile section

--- a/7-AirCnC/index.html
+++ b/7-AirCnC/index.html
@@ -31,9 +31,18 @@
           <h1>Chris, Golden Retriever</h1>
           <h2 class="location">New York, NY, United States</h2>
           <span class="icons">
-            <img src="images/icons/mute.svg" alt="Quiet">
-            <img src="images/icons/baby.svg" alt="Kid Friendly">
-            <img src="images/icons/lightning.svg" alt="Energetic">
+            <div class="image-container">
+              <img src="images/icons/mute.svg" alt="Quiet">
+              <p>Doesn't bark</p>
+            </div>
+            <div class="image-container">
+              <img src="images/icons/baby.svg" alt="Kid Friendly">
+              <p>Kid Friendly</p>
+            </div>
+            <div class="image-container">
+              <img src="images/icons/lightning.svg" alt="Energetic">
+              <p>Energetic</p>
+            </div>
           </span><!-- .icons -->
         </div> <!-- .pet-details -->
 
@@ -81,7 +90,7 @@
         <img src="images/dog-3.jpg" alt="Dog">
       </section> <!-- .photos -->
 
-    </main>
+    </main> <!-- main -->
 
 
   </div> <!-- .container -->
